--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "tsc"
+    "start": "tsc",
+    "watch": "tsc-watch --onSuccess 'node ./dist/server.js'"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +15,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "tsc-watch": "^4.2.9",
     "typescript": "^4.1.5"
   }
 }
